--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,9 +9,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "dev-area" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "dev-area" ]
 
 permissions:
   contents: read
