--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'java-library'
 	id 'org.springframework.boot' version '3.0.4'
 	id 'io.spring.dependency-management' version '1.1.0'
 	id 'jacoco'
@@ -24,6 +25,9 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven {
+		url 'https://s01.oss.sonatype.org/content/repositories/snapshots'
+	}
 }
 
 configurations {
@@ -50,6 +54,7 @@ task integrationTest(type: Test) {
 }
 
 dependencies {
+	implementation 'io.github.GameBuddyDevs:backend-library:0.0.2-SNAPSHOT'
 	implementation('org.springframework.boot:spring-boot-starter-actuator')
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
