--- a/src/main/resources/application-k8s.yml
+++ b/src/main/resources/application-k8s.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://l2.eren.wtf:5432/gamebuddydb
-    username: gamebuddy
-    password: 3uT4}dpjK2PUk2#n
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
   jpa:
@@ -18,8 +18,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: noreply.gamebuddy@gmail.com
-    password: symikbrjjpvsqhlt
+    username: ${EMAIL}
+    password: ${EMAIL_PWD}
     properties:
       mail:
         smtp:
@@ -29,7 +29,7 @@ spring:
 
 springdoc:
   swagger-ui:
-    path: /swagger-ui
+    path: ${SPRINGDOC_SWAGGER_UI_PATH}
   api-docs:
     path: /api-docs
 
