bugs and code smells fixed. Unnecessary exception class deleted.

--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,7 @@ test {
 sonarqube {
 	properties {
 		property 'sonar.coverage.jacoco.xmlReportPaths', "${project.buildDir}/reports/jacoco.xml"
+		property 'sonar.coverage.exclusions', '**/config/**, **/exception/**'
 	}
 }
 
